# report_platform

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  docker-compose.yml
backend/: .black.toml  .dockerignore  .ruff.toml  Dockerfile  Makefile  alembic.ini  pyproject.toml  worker.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/api/: exception_handlers.py  health.py  reports.py  runs.py  schemas.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py  engine.py  session.py  sync_engine.py
backend/app/db/models/: __init__.py  report.py  report_run.py
backend/app/reports/: __init__.py  autodiscover.py  base.py  registry.py  seeder.py
backend/app/reports/sales_summary/: __init__.py  data_source.py  generator.py  report.py
backend/app/reports/user_activity/: __init__.py  data_source.py  generator.py  report.py
backend/app/workers/: celery_app.py  tasks.py  transitions.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  config.ts  main.tsx  routes.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Layout.module.css  Layout.tsx  RunReportButton.module.css  RunReportButton.tsx  StatusBadge.module.css  StatusBadge.tsx  Toast.module.css  Toast.tsx
frontend/src/hooks/: usePolling.ts  useRunStatus.ts
frontend/src/pages/: ReportsListPage.module.css  ReportsListPage.tsx  RunDetailPage.module.css  RunDetailPage.tsx  RunsListPage.module.css  RunsListPage.tsx
(+1 files in other folders)
