[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "report-platform-backend"
version = "0.1.0"
description = "Async report generation platform — backend service"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",

    # Database
    "sqlalchemy[asyncio]==2.0.30",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",
    "alembic==1.13.1",

    # Task queue
    "celery[redis]==5.4.0",
    "redis==5.0.4",

    # Report generation
    "openpyxl==3.1.2",
    "reportlab==4.2.0",

    # Utilities
    "pydantic-settings==2.2.1",
    "python-multipart==0.0.9",
    "aiofiles==23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "httpx==0.27.0",
    "ruff==0.4.4",
    "black==24.4.2",
    "mypy==1.10.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
